fixes spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -141,7 +141,7 @@
 	}
 
 	#tools li:hover {
-		margin-top: 0;
+		margin-top: 2px;
 		border: 4px ridge #aaa;
 	}
 
